Created course categories table

--- a/Esoft/appsettings.Development.json
+++ b/Esoft/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionString": {
+    "DevelopmentConnectionString": "Data Source=.;Initial Catalog=Esoft;User ID=sa;Password=123456"
   }
 }
