--- a/Esoft.Core/Esoft.Core.csproj
+++ b/Esoft.Core/Esoft.Core.csproj
@@ -8,13 +8,24 @@
     <Folder Include="ApiInputModels\" />
     <Folder Include="ApiOutputModels\" />
     <Folder Include="BusinessLogic\" />
-    <Folder Include="Entity\Data\" />
-    <Folder Include="Framework\BaseClass\" />
     <Folder Include="Framework\Configuration\" />
     <Folder Include="Framework\Extensions\" />
     <Folder Include="Framework\FilterAttributes\" />
     <Folder Include="Framework\Jwt\" />
     <Folder Include="ReportModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
