--- a/Esoft/appsettings.json
+++ b/Esoft/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=.;Initial Catalog=Esoft;User ID=sa;Password=123456"
+  }
 }
