--- a/Esoft.Core/Esoft.Core.csproj
+++ b/Esoft.Core/Esoft.Core.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entity\Data\CourseModelss\**" />
+    <EmbeddedResource Remove="Entity\Data\CourseModelss\**" />
+    <None Remove="Entity\Data\CourseModelss\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="ApiInputModels\" />
     <Folder Include="ApiOutputModels\" />
     <Folder Include="BusinessLogic\" />
@@ -12,6 +18,7 @@
     <Folder Include="Framework\Extensions\" />
     <Folder Include="Framework\FilterAttributes\" />
     <Folder Include="Framework\Jwt\" />
+    <Folder Include="Migrations\" />
     <Folder Include="ReportModels\" />
   </ItemGroup>
 
