--- a/Esoft.Core/Esoft.Core.csproj
+++ b/Esoft.Core/Esoft.Core.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <Folder Include="ApiInputModels\" />
     <Folder Include="ApiOutputModels\" />
-    <Folder Include="BusinessLogic\" />
+    <Folder Include="BusinessLogic\Service\" />
     <Folder Include="Framework\Configuration\" />
     <Folder Include="Framework\Extensions\" />
     <Folder Include="Framework\FilterAttributes\" />
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.8">
       <PrivateAssets>all</PrivateAssets>
